--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Mini portfolio website - Bedimcode</title>
+        <title>Mini portfolio Claudio Fritzen </title>
     </head>
     <body>
         <!--=============== HEADER PROFILE ===============-->
@@ -37,13 +37,13 @@
                     <h3 class="profile__profession">Dev Python | Django</h3>
                     
                     <ul class="profile__social">
-                        <a href="" target="_blank" class="profile__social-link">
+                        <!-- <a href="" target="_blank" class="profile__social-link">
                             <i class="ri-instagram-line"></i>
-                        </a>
-                        <a href="" target="_blank" class="profile__social-link">
+                        </a> -->
+                        <a href="https://www.linkedin.com/in/claudiofritzen/" target="_blank" class="profile__social-link">
                             <i class="ri-linkedin-line"></i>
                         </a>
-                        <a href="" target="_blank" class="profile__social-link">
+                        <a href="https://github.com/ClaudioFritzen" target="_blank" class="profile__social-link">
                             <i class="ri-github-fill"></i>
                         </a>
                     </ul>
@@ -80,9 +80,9 @@
                         <a href="https://api.whatsapp.com/send?phone=351913816383&text=Hello, more information!" target="_blank" class="button button__small button__gray">
                             <i class="ri-whatsapp-line"></i>
                         </a>
-                        <a href="" target="_blank" class="button button__small button__gray">
+                        <!-- <a href="" target="_blank" class="button button__small button__gray">
                             <i class="ri-messenger-line"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -105,14 +105,17 @@
                     <!--=============== PROJECTS ===============-->
                     <div class="projects__content grid filters__active " data-content id="projects">
                         <article class="projects__card">
-                            <img src="assets/img/project1.jpg" alt="" class="projects__img">
+                            <img src="assets/img/api django - ninja.jpeg" alt="" class="projects__img">
                             
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle"> Web</span>
-                                    <h3 class="projects__title">Payment Site </h3>                                    </h3>
-                                    <a href="" class="projects__button button button__small">
+                                    <span class="projects__subtitle"> API</span>
+                                    <h3 class="projects__title">Django Ninja </h3> 
+                                    <a href="https://api-django-ninja.onrender.com/api/docs" target="_blank" class="projects__button button button__small">
                                         <i class="ri-links-line"></i>
+                                    </a>
+                                    <a href="https://github.com/ClaudioFritzen/API_DJANGO_NINJA" target="_blank" class="profile__social-link">
+                                        <i class="ri-github-fill"></i>
                                     </a>
                                 </div>
                             </div>
@@ -126,8 +129,11 @@
                                     <h3 class="projects__title">
                                         portfolio
                                     </h3>
-                                    <a href="" class="projects__button button button__small">
+                                    <a href="https://portifolioclaudiofritzen.netlify.app/" target="_blank" class="projects__button button button__small">
                                         <i class="ri-links-line"></i>
+                                    </a>
+                                    <a href="https://github.com/ClaudioFritzen/Portifolio2023" target="_blank" class="profile__social-link">
+                                        <i class="ri-github-fill"></i>
                                     </a>
                                 </div>
                             </div>
@@ -141,8 +147,11 @@
                                     <h3 class="projects__title">
                                         NutriLab
                                     </h3>
-                                    <a href="" class="projects__button button button__small">
+                                    <!-- <a href="" class="projects__button button button__small">
                                         <i class="ri-links-line"></i>
+                                    </a> -->
+                                    <a href="https://github.com/ClaudioFritzen/Nutri_Lab_Django" target="_blank" class="profile__social-link">
+                                        <i class="ri-github-fill"></i>
                                     </a>
                                 </div>
                             </div>
@@ -153,9 +162,12 @@
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle"> Web</span>
-                                    <h3 class="projects__title"> Mecanica </h3>                                    </h3>
-                                    <a href="" class="projects__button button button__small">
+                                    <h3 class="projects__title"> Mecanica </h3>                         
+                                    <!-- <a href="" class="projects__button button button__small">
                                         <i class="ri-links-line"></i>
+                                    </a> -->
+                                    <a href="https://github.com/ClaudioFritzen/Mecanica" target="_blank" class="profile__social-link">
+                                        <i class="ri-github-fill"></i>
                                     </a>
                                 </div>
                             </div>
